--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "phpunit/phpunit": "11.3.1",
         "psr/container": "^1.0 || ^2.0",
         "psr/event-dispatcher": "^1.0",
-        "rector/rector": "1.2.4"
+        "rector/rector": "1.2.4",
+        "symfony/security-core": "^6.4 || ^7.0"
     },
     "conflict": {
         "psr/container": ">=3.0",
