--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -11,6 +11,11 @@ parameters:
 			path: src/ReactPhpServer.php
 
 		-
+			message: "#^Offset 1 does not exist on array\\{0\\: string, 1\\?\\: numeric\\-string\\}\\.$#"
+			count: 1
+			path: src/Session/Reader/PhpReader.php
+
+		-
 			message: "#^Method BabDev\\\\WebSocket\\\\Server\\\\Session\\\\Reader\\\\PhpSerializeReader\\:\\:read\\(\\) should return array but returns mixed\\.$#"
 			count: 1
 			path: src/Session/Reader/PhpSerializeReader.php
