--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -35,4 +35,4 @@ jobs:
         run: composer update ${{ matrix.composer-flags }} --prefer-dist --no-suggest
 
       - name: Execute tests
-        run: vendor/bin/phpunit
+        run: vendor/bin/phpunit --display-deprecations
