--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "8.2.* || 8.3.* || 8.4.*",
+        "php": ">=8.1",
         "guzzlehttp/psr7": "^2.4",
         "psr/http-message": "^1.0 || ^2.0",
         "ratchet/rfc6455": "^0.3.1",
@@ -24,7 +24,7 @@
         "phpstan/extension-installer": "^1.3.1",
         "phpstan/phpstan": "1.12.7",
         "phpstan/phpstan-phpunit": "1.4.0",
-        "phpunit/phpunit": "11.4.3",
+        "phpunit/phpunit": "^9.0",
         "psr/container": "^1.0 || ^2.0",
         "psr/event-dispatcher": "^1.0",
         "rector/rector": "1.2.8",
